--- a/public/game.html
+++ b/public/game.html
@@ -94,6 +94,8 @@
         id = id.replace(/[^\x00-\x7F]/g, '');
       }
     if(id.indexOf('mine') !== -1) return 'empty';
+    // 'toucher c'est jouer' : require selecting an enemy piece as the card target
+  if(id.indexOf('toucher') !== -1) return 'enemy';
     // kamikaz targets one of your pieces (play card, then choose a piece)
     if(id.indexOf('kamikaz') !== -1) return 'owned';
     if(id.indexOf('invis') !== -1 || id.indexOf('invisible') !== -1) return 'owned';
