--- a/public/game.html
+++ b/public/game.html
@@ -993,6 +993,7 @@
           let imgSrc = null;
           if(cid === 'adoubement' || title.indexOf('adoub') !== -1) imgSrc = '/assets/img/cards/adoubement.png';
           if(cid === 'folie' || title.indexOf('folie') !== -1 || title.indexOf('fou') !== -1) imgSrc = '/assets/img/cards/folie.png';
+          if(cid === 'fortification' || title.indexOf('fortification') !== -1 || title.indexOf('fortif') !== -1) imgSrc = '/assets/img/cards/fortification.png';
           if(imgSrc){
             const img = document.createElement('img');
             img.src = imgSrc;
