--- a/public/waiting.html
+++ b/public/waiting.html
@@ -29,6 +29,13 @@
       </div>
 
       <div style="margin-top:8px">
+        <label id="no-remise" style="display:none;align-items:center;gap:8px;">
+          <input type="checkbox" id="no-remiseToggle" />
+          Sans remise
+        </label>
+      </div>
+
+      <div style="margin-top:8px">
         <button id="startBtn" style="display:none" class="btn-cta">Commencer la partie</button>
         <button id="copyInviteBtn" style="margin-left:8px" class="btn-ghost">Copier le lien d'invitation</button>
       </div>
@@ -54,6 +61,8 @@
   const youAreHostEl = document.getElementById('youAreHost');
   const autoDrawLabelEl = document.getElementById('autoDrawLabel');
   const autoDrawToggleEl = document.getElementById('autoDrawToggle');
+  const noRemiseLabelEl = document.getElementById('no-remise');
+  const noRemiseToggleEl = document.getElementById('no-remiseToggle');
 
     function log(...args){ console.log(...args); }
 
@@ -114,6 +123,20 @@
             }
           }
         }catch(_){ }
+        // update no-remise UI if server provides it
+        try{
+          if(typeof data.noRemise !== 'undefined' && noRemiseLabelEl && noRemiseToggleEl){
+            // show the control only to the host
+            if(myPlayerId && roomHostId && myPlayerId === roomHostId){
+              noRemiseLabelEl.style.display = 'inline-flex';
+              noRemiseToggleEl.checked = !!data.noRemise;
+              noRemiseToggleEl.disabled = false;
+            } else {
+              // hide control for non-hosts
+              noRemiseLabelEl.style.display = 'none';
+            }
+          }
+        }catch(_){ }
       });
 
       // register game started handler early so we don't miss the broadcast
@@ -162,6 +185,16 @@
                 if(autoDrawLabelEl) autoDrawLabelEl.style.display = 'none';
               }
             }
+            // set no-remise independently so host sees it even if autoDraw is undefined
+            try{
+              if(roomInfo && typeof roomInfo.noRemise !== 'undefined'){
+                if(myPlayerId && roomHostId && myPlayerId === roomHostId){
+                  if(noRemiseLabelEl && noRemiseToggleEl){ noRemiseLabelEl.style.display = 'inline-flex'; noRemiseToggleEl.checked = !!roomInfo.noRemise; noRemiseToggleEl.disabled = false; }
+                } else {
+                  if(noRemiseLabelEl) noRemiseLabelEl.style.display = 'none';
+                }
+              }
+            }catch(_){ }
           }catch(_){ }
           if(roomInfo && roomInfo.status === 'playing'){
             // server already marked room as playing; redirect immediately
